--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "dayjs": "^1.10.3",
+    "express": "^4.17.1",
     "hebcal": "^2.3.2",
+    "jewish-dates-core": "^1.0.5",
     "parse": "^2.19.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
