--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://barjan.github.io/react-final-project",
   "name": "pure",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "dayjs": "^1.10.3",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "hebcal": "^2.3.2",
     "jewish-dates-core": "^1.0.5",
     "parse": "^2.19.0",
@@ -23,6 +25,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
