--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "dayjs": "^1.10.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "gh-pages": "^3.1.0",
     "hebcal": "^2.3.2",
     "jewish-dates-core": "^1.0.5",
-    "parse": "^2.19.0",
+    "parse": "^4.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-calendar": "^3.3.0",
@@ -21,7 +21,7 @@
     "react-jewish-datepicker": "^1.0.5",
     "react-native-jewish-calendar": "^2.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
